DbContext, new controller and required files scaffolded.

--- a/AS-WebApi-Projekt/appsettings.json
+++ b/AS-WebApi-Projekt/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AS_WebApi_ProjektContext": "Server=(localdb)\\mssqllocaldb;Database=AS_WebApi_ProjektContext-193b241e-e834-42f3-be91-bc706e4d7036;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
