--- a/AS-WebApi-Projekt/AS-WebApi-Projekt.csproj
+++ b/AS-WebApi-Projekt/AS-WebApi-Projekt.csproj
@@ -5,6 +5,11 @@
     <RootNamespace>AS_WebApi_Projekt</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>ApiDocu.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.6" />
